# uci-air-quality-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/processed/: bnn_metrics.csv  bnn_model.pt  eval_metrics.csv  gp_counterfactual_sensitivity.csv  gp_kernel_diagnostics.txt  gp_metrics.csv  gp_prediction_differences.csv  pf_imputed.csv  scalability_metrics.csv  svgp_locally_periodic.pt  svgp_meta.pt  svgp_periodic.pt  svgp_rbf.pt
scripts/: diagnose_gp_kernels.py  evaluate.py  evaluate_pipeline.py  profile_scalability.py  run_imputation.py  train_bnn.py  train_gp.py
src/: config.py
src/data/: loader.py  preprocessor.py
src/evaluation/: decision_policy.py  metrics.py
src/frontend/: app.py
src/imputation/: bayesian_linear.py  particle_filter.py
src/models/: bnn_vi.py  sparse_gp.py
tests/: test_bnn.py  test_data.py  test_evaluation.py  test_imputation.py  test_models.py  test_phase6.py
