[project]
name = "probabilistic-air-quality"
version = "0.1.0"
description = "Probabilistic Air Quality Prediction using GPs and BNNs with missing data imputation"
readme = "README.md"
requires-python = ">=3.10"

# Standard Dependencies
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "torch",
    "gpytorch",
    "pyro-ppl"
]

[project.optional-dependencies]
# Development and Testing Dependencies
dev = [
    "pytest>=7.4",
    "jupyter",          # Needed for your EDA and prototyping notebooks
    "ipykernel"
]

[tool.uv.sources]
# Instruct uv to pull torch exclusively from the custom PyTorch index
torch = { index = "pytorch" }

[[tool.uv.index]]
# Define the PyTorch index for CUDA 13.0
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true